Fixes image overflow issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -261,7 +261,6 @@ main {
 
 .hero-image-container {
   max-width: 100vw;
-  overflow: hidden;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -695,14 +694,12 @@ button[type="submit"] {
     justify-content: space-between;
     padding: 30px 20px;
     box-sizing: border-box;
-    height: 55vh;
     margin: 2em auto;
   }
 
   .hero-text {
     flex: 5;
     text-align: end;
-    margin-left: 23vh;
   }
 
   .hero-animation-container {
@@ -783,8 +780,6 @@ button[type="submit"] {
   .row {
     display: flex;
     align-items: center;
-    /* flex-wrap: wrap; */
-    /* justify-content: space-around; */
   }
 
   .contact-image {
